final site page edits apr 16

--- a/klopson/index.html
+++ b/klopson/index.html
@@ -13,7 +13,7 @@
         <hr>
         <a href="https://github.com/jklopson">GitHub</a>
         <br>
-        <a href="jellydocs/home.html">Research Log</a>
+        <a href="https://docs.google.com/document/d/1NpwE3I5i1JdFe2H5soODfXBN4MEC7xc32dLOWL5Ji1Y/edit?usp=sharing">Research Log</a>
     </div>
     <div class="container">
         <div class="item" style="--i:0"></div>
